Fix image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,6 @@ body {
 
 .img-flex {
   width: 100%;
-  display: inline;
 }
 
 .content {
@@ -56,6 +55,7 @@ a:hover {
 img {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 @media only screen and (min-width: 38em) {
@@ -67,13 +67,16 @@ img {
   .content {
     width: 50%;
     padding: 2rem;
-    display: inline;
     float: left;
   }
 
-  .img-flex {
+  img {
     width: 50%;
     float: left;
+  }
+
+  .wrap {
+    padding: 2rem;
   }
 
 }
